--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Forty by HTML5 UP</title>
+		<title>2021 SANGHO'S EXHIBITION</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
+						<a href="index.html" class="logo"><strong>2021</strong> <span>SANGHO'S WORK ONLINE EXHIBITION</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -29,13 +29,10 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
-						</ul>
-						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
+							<li><a href="landing.html">NO.1 Exhibition Hall</a></li>
+							<li><a href="generic.html">NO.2 Exhibition Hall</a></li>
+							<li><a href="elements.html">NO.3 Exhibition Hall</a></li>
+							<li><a href="elements.html">NO.4 Exhibition Hall</a></li>
 						</ul>
 					</nav>
 
@@ -43,13 +40,15 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Hi, my name is Forty</h1>
+								<h1>2021 SANGHO'S WORK<br>
+									 ONLINE EXHIBITION</h1>
 							</header>
 							<div class="content">
-								<p>A responsive site template designed by HTML5 UP<br />
-								and released under the Creative Commons.</p>
+								<p>2021 한해 동안 제작했던 작품 입니다.<BR>
+								COVID-19 로 인해 부득이하게 온라인으로 진행 되는 점 양해 부탁드립니다.<BR>
+								많은 관람 부탁드립니다.</p>
 								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">Get Started</a></li>
+									<li><a href="#one" class="button next scrolly">START</a></li>
 								</ul>
 							</div>
 						</div>
@@ -65,8 +64,8 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Aliquam</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<h3><a href="landing.html" class="link"><li><a href="elements.html">NO.1 Exhibition Hall</a></li></a></h3>
+										<p>TATE POSTER DESIGN</p>
 									</header>
 								</article>
 								<article>
@@ -74,8 +73,8 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Tempus</a></h3>
-										<p>feugiat amet tempus</p>
+										<h3><a href="landing.html" class="link"><li><a href="elements.html">NO.2 Exhibition Hall</a></li></a></h3>
+										<p>SUNRIN PESTVAL POSTER/BANNER DESIGN</p>
 									</header>
 								</article>
 								<article>
@@ -83,8 +82,8 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Magna</a></h3>
-										<p>Lorem etiam nullam</p>
+										<h3><a href="landing.html" class="link"><li><a href="elements.html">NO.3 Exhibition Hall</a></li></a></h3>
+										<p>ENGLISH BOOK COVER DESIGN</p>
 									</header>
 								</article>
 								<article>
@@ -92,26 +91,10 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Ipsum</a></h3>
-										<p>Nisl sed aliquam</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<h3><a href="landing.html" class="link"><li><a href="elements.html">NO.4 Exhibition Hall</a></li></a></h3>
+										<p>GFRIEND MAGO KINETIC TYPOGRAPHY M/V </p>
+
 									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Consequat</a></h3>
-										<p>Ipsum dolor sit amet</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Etiam</a></h3>
-										<p>Feugiat amet tempus</p>
 									</header>
 								</article>
 							</section>
@@ -120,12 +103,15 @@
 							<section id="two">
 								<div class="inner">
 									<header class="major">
-										<h2>Massa libero</h2>
+										<h2>INFORMATION</h2>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
-									<ul class="actions">
-										<li><a href="landing.html" class="button next">Get Started</a></li>
-									</ul>
+									<p>안녕하세요 2021 SANGHO'S WORK EXHIBITION 입니다.<BR>
+										이번 2021 SANGHO'S WORK EXHIBITION 은 COVID-19 로 인한 부득이하게 온라인으로 개최하게 되었습니다.<br>
+								관람객 여러분들을 직접 현장에서 뵙지 못하여 매우 아쉽습니다.<br>
+							전시회 링크 안 이름과 메일 주소 적는 칸 에 적어서 전송 해주시면 추첨을 통해 100분께 전시 기념품을 <BR>
+								전달해드리도록 하겠습니다.<br>
+					      감사합니다.</p>
+
 								</div>
 							</section>
 
@@ -144,15 +130,12 @@
 										<div class="field half">
 											<label for="email">Email</label>
 											<input type="text" name="email" id="email" />
+
 										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="6"></textarea>
-										</div>
-									</div>
+										<div class="field"
 									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Clear" /></li>
+										<li><input type="submit" value="Send" class="primary" /></li>
+
 									</ul>
 								</form>
 							</section>
@@ -161,23 +144,22 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
+										<a href="#">2021EXHIBITION@sangho.co.kr</a>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-phone"></span>
 										<h3>Phone</h3>
-										<span>(000) 000-0000 x12387</span>
+										<span>(+82)010-8485-6746</span>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-home"></span>
 										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
-										United States of America</span>
+										<span>SUNRIN INTERNET HIGH SCHOOL<br />
+										Republic of korea</span>
 									</div>
 								</section>
 							</section>
@@ -188,8 +170,7 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+
 								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
