--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link"><li><a href="elements.html">NO.2 Exhibition Hall</a></li></a></h3>
-										<p>SUNRIN PESTVAL POSTER/BANNER DESIGN</p>
+										<p>SUNRIN FESTVAL POSTER/BANNER DESIGN</p>
 									</header>
 								</article>
 								<article>
@@ -92,7 +92,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link"><li><a href="elements.html">NO.4 Exhibition Hall</a></li></a></h3>
-										<p>GFRIEND MAGO KINETIC TYPOGRAPHY M/V </p>
+										<p>GFRIEND MAGO 키네틱 타이포 그래피 M/V </p>
 
 									</span>
 									</header>
@@ -100,6 +100,14 @@
 							</section>
 
 						<!-- Two -->
+						<span class="images">
+							<img src="images/21218 신상호 포스터.jpg" alt=""
+							width="750">
+						</span>
+						<span class="images">
+							<img src="images/영표.jpg" alt=""
+							width="750">
+						</span>
 							<section id="two">
 								<div class="inner">
 									<header class="major">
